--- a/plants/style.css
+++ b/plants/style.css
@@ -420,13 +420,94 @@ html, body {
     border-radius: 20px;
 }
 
+.price-basic__active {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+
+    width: 250px;
+    height: 154px;
+    background: #D6E7D2;
+    border-radius: 20px;
+    font-family:'Inter-Regular';
+}
+
+.price-basic__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 20px;
+    padding: 16px 40px 11px 40px;
+}
+
+.basic__line {
+    border-top: 1px solid #AEA1A1;
+    width: 164px;
+    margin-left: 40px;
+    margin-bottom: 5px;
+}
+
+.basic__text {
+    margin: 0;
+    width: 169px;
+    height: 30px;
+    font-weight: 300;
+    font-size: 10px;
+    line-height: 10px;
+    margin-left: 40px;
+    margin-bottom: 5px;
+}
+
+.text__header {
+    margin: 0;
+}
+
+.prices__block{
+    margin: 0;
+    margin-left: 40px;
+    margin-bottom: 10px;
+    font-size: 12px;
+    line-height: 20px;
+}
+
+.dollars {
+    color: #E06733;
+    font-weight: 700;
+}
+
+.price__big {
+    font-size: 16px;
+}
+
+.button__order{
+    margin-left: 40px;
+    margin-bottom: 10px;
+    width: 86px;
+    height: 25px;
+    background: #FFFFFF;
+    border-radius: 10px;
+    background: #FFFFFF;
+    border: 0;
+    cursor: pointer;
+
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 20px;
+    color: #717171;
+    text-decoration: none;
+    text-align: center;
+}
+
 .accord_btn {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-left: 20px;
     width: 16px;
-    height: 16px
+    height: 16px;
 }
 
 .accord {
