--- a/plants/style.css
+++ b/plants/style.css
@@ -593,17 +593,29 @@ html, body {
     justify-content: space-between;
     align-items: center;
     background: #D6E7D2;
-    padding: 5px 30px 0 20px;
     box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
+    cursor: pointer;
 }
 
 .contacts_city__active {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background: #C1E698;
+    border: 1px solid #D6E7D2;
+    /* padding: 5px 30px 0 20px; */
+    height: 284px;
+    width: 450px;
+}
+
+.contacts_city_active_header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     background: #C1E698;
     border: 1px solid #D6E7D2;
-    padding: 5px 30px 0 20px;
+    /* padding: 5px 30px 0 20px; */
     height: 50px;
     width: 450px;
 }
@@ -612,7 +624,7 @@ html, body {
     width: 450px;
     height: 234px;
     background: #DCE9D9;
-    padding: 26px 26px 30px 26px;
+    /* padding: 26px 26px 30px 26px; */
 }
 
 .contacts_city__list {
@@ -621,6 +633,7 @@ html, body {
     justify-content: space-between;
     padding: 0;
     margin: 0;
+    margin-top: 27px;
 }
 
 .contacts_city__cities {
@@ -630,11 +643,12 @@ html, body {
     color: #499A18;
     font-family:'Inter-Regular';
     height: 35px;
-    width: 440px;
     letter-spacing: 0.05em;
     border-bottom: 0.5px solid #D9D9D9;
     list-style: none;
     margin-bottom: 12px;
+    margin-left: 20px;
+    cursor: pointer;
 }
 
 .contacts_city__phone {
@@ -644,11 +658,12 @@ html, body {
     border: 1px solid #000000;
     border-radius: 20px;
     height: 214px;
-    width: 390px;
+    width: 340px;
     padding: 17px 76px 32px 33px;
+    margin-top: 50px;
 }
 
-.contacts_city__phone__text {
+.contacts_city_phone_text {
     display: flex;
     font-weight: 400;
     font-size: 16px;
@@ -700,7 +715,7 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 20px;
+    cursor: pointer;
 }
 
 .accord1 {
@@ -712,12 +727,15 @@ html, body {
     height: 16px;
     border-radius: 16px;
     background: #AEA1A1;
+    margin-right: 35px;
+    cursor: pointer;
 }
 
 .city_text {
     font-family:'Inter-Regular';
     font-size: 20px;
     color: #717171;
+    margin-left: 20px;
 }
 
 .woman_img {
